# equation_processor

./: Cargo.toml  README.md  bacon.toml  flake.nix  shell.nix
equation-processor/: Cargo.toml
output/: force.tex  pythagoras.tex  triangle.tex
src/: gui.rs  lib.rs  main.rs
tests/: csv_and_md_test.rs
