[package]
name = "equation_processor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A tool to render and convert LaTeX equations from CSV or Markdown files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronberger-industries-droid/equation-processor"
readme = "README.md"
keywords = ["LaTeX", "equations", "renderer", "SVG"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.17"
prettytable-rs = "0.10"
eframe = "0.31.1"
egui_file = "0.22.1"
egui-file-dialog = "0.10.0"
egui_extras = "0.31.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
equation_processor = { path = "."}
