[package]
name = "equation_processor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A tool to render and convert LaTeX equations from CSV or Markdown files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kronberger-industries-droid/equation-processor"
readme = "README.md"
keywords = ["LaTeX", "equations", "renderer", "SVG"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
equation_processor = { path = "."}
